<resources>
    <string name="app_name">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_home">О городе</string>
    <string name="menu_gallery">Карта</string>
    <string name="menu_slideshow">Достопримечательности</string>

    <string-array name="attractions">
        <item>Памятник Майклу Джексону</item>
        <item>Небоскрёб "Высоцкий"</item>
        <item>Дом Севастьянова</item>
        <item>Храм на Крови</item>
        <item>Музей радио имени А.С.Попова</item>
        <item>ЦПКиО имени В.В.Маяковского</item>
        <item>Ново-Тихвинский монастырь</item>
        <item>Чёрный тюльпан</item>
        <item>Усадьба Расторгуевых - Харитоновых</item>
        <item>Екатеринбургский дендропарк</item>
    </string-array>

    <string-array name="addresses">
        <item>Ул. Вайнера</item>
        <item>Ул. Малышева, 51</item>
        <item>Проспект Ленина, 35</item>
        <item>Царская ул., 10</item>
        <item>Ул. Розы Люксембург, 9</item>
        <item>Ул. Мичурина, 230</item>
        <item>Ул. Зелёная Роща, 1</item>
        <item>Площадь Советской Армии</item>
        <item>Ул. Карла Либкнехта, 44</item>
        <item>Ул. Первомайская, 87</item>
    </string-array>

    <string-array name="descriptions">
        <item>памятник американскому автору-исполнителю Майклу Джексону в Екатеринбурге, работы скульптора Виктора Мосиелева. Это первый и единственный памятник Джексону на территории России.</item>
        <item>Современный небоскрёб, расположенный в центре города Екатеринбурга,  Высотой 188,3 м. 4 мая 2012 года открылась смотровая площадка. Поднявшись на нее, все желающие смогут посмотреть на город с высоты «птичьего полета».На втором этаже небоскрёба располагается музей Владимира Высоцкого. В основу экспозиции музея вошли личные вещи Владимира Высоцкого. В екатеринбургском Музее представлен ряд уникальных экспонатов, таких как легендарный Mercedes, принадлежавший Владимиру Высоцкому и восковая фигура Владимира Высоцкого, созданная скульптором Александром Сильницким. На площадке перед небоскрёбом расположен памятник песням Высоцкого</item>
        <item>Одна из местных достопримечательностей, архитектура которой особо выделяется среди особняков города.  Дворец является Зданием бывшего Окружного суда, где в 1918 году находился первый в стране Уральский комиссариат труда. Дом Севастьянова внесён в перечень объектов культурного наследия федерального значения.</item>
        <item>Храм-на-Крови во имя Всех святых, в земле Российской просиявших Храм-памятник освящен в 2003 году на месте гибели семьи последнего российского императора Николая II. Один из возможных храмов Екатеринбурга, место паломничества верующих со всей России, строился с 2000 по 2003 годы на месте расстрела Царской семьи, произошедшей в ночь с 16 на 17 июля 1918 года. Это третий в России храм-на-крови. Храм воздвигнут на месте, где до 1977 года находился печально известный дом инженера Ипатьева, в котором трагически оборвалась жизнь последнего российского императора Николая II и его семьи. 60-метровый собор в русско-византийском стиле состоит из двух частей. Верхний храм освящен во имя Святых Царственных Страстотерпцев. В цокольном этаже храма расположена мемориальная комната.</item>
        <item>Единственный на Урале радиотехнический музей, расположенный в особняке, где в годы учебы в Екатеринбургском духовном училище жил изобретатель радио Александр Степанович Попов.</item>
        <item>Екатеринбургский Центральный Парк Культуры и Отдыха им. В.В. Маяковского является одним из уникальных уголков, важнейшим культурным достоянием города Екатеринбурга. Парк расположен в центральном районе города. 70 га парка это лесной массив. На территории парка множество услуг для досуга, развлечения и отдыха, а также располагаются более 50 – ти разнообразных аттракционов. Ежегодно парк пополняется современными развлечениями, аттракционами и площадками.  В основе всех развлечений и мероприятий парка лежит идея семейного отдыха.</item>
        <item>Александро-Невский Ново-Тихвинский монастырь — женский православный монастырь в Екатеринбурге, один из крупнейших в России. Главный храм — собор Александра Невского — представляет собой памятник архитектуры позднего классицизма. Был первым храмом, который в Свердловске вернули верующим в Перестройку</item>
        <item>мемориал уральским воинам интернационалистам погибшим в Афганистане и воинам погибшим в Чечне. Находится на площади Советской Армии </item>
        <item>один из наиболее ценных архитектурных усадебно-парковых ансамблей в Екатеринбурге, памятник архитектуры федерального значения. Комплекс зданий усадьбы поражает своим великолепием и богатством форм всех, кто впервые оказывается в Екатеринбурге.</item>
        <item>Екатеринбургский дендропарк включает в себя 2 парка в Екатеринбурге, один из которых находится в Кировском районе, второй —   в Ленинском районе.На сегодняшний момент представляет из себя парк во французском стиле с богатейшей цветочной оранжереей, летом здесь проводятся выставки уральских художников.</item>
    </string-array>

    <string name="home_second">Home Second</string>
    <string name="title_activity_map">Map</string>

    <string name="city_description1">Екатеринбург (с 1924 по 1991 годы - Свердловск) — один из самых крупных городов России, является административным центром Уральского федерального округа и Свердловской области. Расположен город в центре Среднего Урала, на берегу реки Исеть. Сейчас Екатеринбург является одним из крупнейших в России финансовых, промышленных и культурных центров
В Екатеринбурге много достопримечательностей - город имеет уникальное смещение архитектурных, исторических и культурных раритетов. В городе находится более 60 памятников истории и культуры, 43 из которых считаются национальной нами памятниками. Именно поэтому Екатеринбург может заявляться как "самый исторический город России"</string>
    <string name="city_descritption2">В настоящее время Екатеринбург — один из ведущих театральных центров России, в городе действует 57 театров, многие из которых пользуются популярностью не только в России, но и за рубежом. Здания многих театров (например, Театр оперы и балета) являются памятниками архитектуры.
В городе функционирует Свердловская киностудия – единственная в России за пределами Москвы и Санкт-Петербурга, снимающая не только документальное, но и художественное кино.</string>
    <string name="city_descritption3">Екатеринбург – самый компактный город-миллионник страны. Протяжённость застроенной территории Екатеринбурга – 20 километров с севера на юг и 15 с запада на восток. Поездка на Екатеринбургском метрополитене от конечной северной станции «Проспект Космонавтов» до конечной южной станции «Ботаническая» занимает всего 19 минут.
Екатеринбург занимает третье место в стране (после Москвы и Санкт-Петербурга) по количеству дипломатических представительств, при этом их консульские округа распространяются далеко за пределы Свердловской области, и обслуживают другие регионы Урала, Сибири и Поволжья
Комиссией ЮНЕСКО Екатеринбург был признан одним из 12 идеальных городов мира.</string>
    <string name="play_str">PLAY</string>
    <string name="pause_str">PAUSE</string>
</resources>
