<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_news">

    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.test.ui.news.NewsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_news">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.test.ui.news.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_news" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.test.ui.map.MapFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_attractions"
        android:name="com.example.test.ui.attractions.AttractionsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_attractions" />
</navigation>